--- a/style1.css
+++ b/style1.css
@@ -1,12 +1,53 @@
-h1{
+hr{
     color: black;
+}
+
+p{
+    color: peachpuff;
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 0%, rgba(0,212,255,1) 100%);
+}
+a{
+    color: rgb(255, 255, 255);
+}
+h1{
+    color: rgb(0, 0, 0);
     text-align: center;
-    background: rgb(24,24,124);
-    background: linear-gradient(90deg, rgba(24,24,124,1) 54%, rgba(2,0,36,1) 100%, rgba(0,212,255,1) 100%); 
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 0%, rgba(0,212,255,1) 100%);
+}
+h2{
+    text-align: center;
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 0%, rgba(0,212,255,1) 100%);
+}
+h3{
+    text-align: center;
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(180,180,236,1) 0%, rgba(123,224,245,1) 100%);
 }
 body{
     background-image: url(./iiimagenes/santa-cruz-argentina-provincia.jpg);
-    
     background-attachment: fixed;
     background-size: cover;
+}
+#links{
+    color:plum;
+}
+#tabla{
+    text-align: center;
+    table-layout: fixed;
+    color:peachpuff;
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 0%, rgba(0,212,255,1) 100%);
+}
+#info{
+    color: black;
+    background: blanchedalmond;
+    background: linear-gradient(90deg, rgb(250, 250, 250)100%);
+}
+.listas{
+    color: peachpuff;
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 0%, rgba(0,212,255,1) 100%);
 }
