--- a/style1.css
+++ b/style1.css
@@ -3,7 +3,7 @@ hr{
 }
 
 p{
-    color: peachpuff;
+    color: rgb(255, 255, 255);
     background: rgb(2,0,36);
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 0%, rgba(0,212,255,1) 100%);
 }
@@ -17,22 +17,37 @@ h1{
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 0%, rgba(0,212,255,1) 100%);
 }
 h2{
+    color: black;
     text-align: center;
     background: rgb(2,0,36);
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 0%, rgba(0,212,255,1) 100%);
 }
 h3{
+    color: black;
     text-align: center;
     background: rgb(2,0,36);
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(180,180,236,1) 0%, rgba(123,224,245,1) 100%);
 }
 body{
+    color: black;
+    font-family:'Times New Roman', Times, serif;
+    text-align: center;
     background-image: url(./iiimagenes/santa-cruz-argentina-provincia.jpg);
     background-attachment: fixed;
     background-size: cover;
 }
+main{
+    margin: 3px;
+    background-color: rgba(255, 255, 255, 0.548);
+}
+table tr th{
+    border: black;
+    text-align: center;
+}
 #links{
-    color:plum;
+    color:rgb(0, 0, 0);
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 0%, rgba(0,212,255,1) 100%);
 }
 #tabla{
     text-align: center;
@@ -42,8 +57,7 @@ body{
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 0%, rgba(0,212,255,1) 100%);
 }
 #info{
-    color: black;
-    background: blanchedalmond;
+    color: rgb(255, 255, 255);
     background: linear-gradient(90deg, rgb(250, 250, 250)100%);
 }
 .listas{
