--- a/style1.css
+++ b/style1.css
@@ -3,9 +3,8 @@ hr{
 }
 
 p{
-    color: rgb(255, 255, 255);
-    background: rgb(2,0,36);
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 0%, rgba(0,212,255,1) 100%);
+    color: rgb(0, 0, 0);
+    
 }
 a{
     color: rgb(255, 255, 255);
@@ -36,8 +35,13 @@ body{
     background-attachment: fixed;
     background-size: cover;
 }
+header{
+    margin: 5px;
+    background-color: rgba(255, 255, 255, 0.548);
+
+}
 main{
-    margin: 3px;
+    margin: 5px;
     background-color: rgba(255, 255, 255, 0.548);
 }
 table tr th{
@@ -50,9 +54,10 @@ table tr th{
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 0%, rgba(0,212,255,1) 100%);
 }
 #tabla{
+    margin: 0 auto;
     text-align: center;
     table-layout: fixed;
-    color:peachpuff;
+    color:rgb(255, 255, 255);
     background: rgb(2,0,36);
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 0%, rgba(0,212,255,1) 100%);
 }
@@ -61,7 +66,9 @@ table tr th{
     background: linear-gradient(90deg, rgb(250, 250, 250)100%);
 }
 .listas{
-    color: peachpuff;
+    color: rgb(255, 255, 255);
+    margin-left: 750px;
+    margin-right: 750px;
     background: rgb(2,0,36);
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 0%, rgba(0,212,255,1) 100%);
 }
